<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mysamples.basiclogin.Question2">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/what_is_the_product_of_6_x_7"
        android:id="@+id/textViewQ2"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="43dp"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewQ2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="71dp"
        android:id="@+id/radioGroup">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="41dp"
            android:text="@string/_42"
            android:id="@+id/radioButton42"
            android:checked="false"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="41dp"
            android:text="@string/_45"
            android:id="@+id/radioButton45"
            android:checked="false"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="41dp"
            android:text="@string/_37"
            android:id="@+id/radioButton37"
            android:checked="false"/>
    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select"
        android:id="@+id/buttonSelectQ2"
        android:layout_below="@+id/radioGroup"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="43dp"/>

</RelativeLayout>
