<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mysamples.basiclogin.SecondActivity"
    android:background="#0b0a0a">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/proceed"
        android:id="@+id/buttonProceed"
        android:layout_marginBottom="64dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="34dp"
        android:layout_marginStart="34dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/close"
        android:id="@+id/buttonClose"
        android:layout_alignTop="@+id/buttonProceed"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="34dp"
        android:layout_marginEnd="34dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/switch_image"
        android:id="@+id/buttonSwitchImage"
        android:layout_below="@+id/buttonClose"
        android:layout_centerHorizontal="true"/>

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/buttonProceed"
        android:src="@mipmap/and_image1"
        android:scaleType="fitCenter"
        android:contentDescription=""/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Welcome to the Basic Math Test"
        android:id="@+id/textViewWelcome"
        android:textColor="#ffffff"
        android:textSize="50dp"
        android:textAlignment="center"
        android:layout_alignTop="@+id/imageView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Username"
        android:id="@+id/textViewQ2Username"
        android:layout_below="@+id/textViewWelcome"
        android:layout_centerHorizontal="true"
        android:textSize="50dp"
        android:textColor="#a2c8df"/>
</RelativeLayout>
